<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frmdialogoperzonalizado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323131"
    android:textAlignment="center"
    tools:context=".dialogopersonalizado">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icononetflix" />

    <TextView
        android:id="@+id/txtfoto"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/anton"
        android:text="@string/txtingresesusdatos"
        android:textAlignment="center"
        android:textColor="#D50D18"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittxt_nombre"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bordes_rectangulo"
        android:hint="@string/hintnombre"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfoto" />

    <EditText
        android:id="@+id/edittxt_edad"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bordes_rectangulo"
        android:hint="@string/hintedad"
        android:numeric="integer"
        android:password="false"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_nombre" />

    <EditText
        android:id="@+id/edittxt_genero"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bordes_rectangulo"
        android:hint="@string/hintgenero"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_edad" />

    <Button
        android:id="@+id/btnaceptar"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bordes_redondos"
        android:drawableBottom="@drawable/imageguardar"
        android:text="@string/btnguardar"
        android:textSize="20sp"
        app:backgroundTint="#D50D18"
        app:iconGravity="end"
        app:iconSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_genero" />

</androidx.constraintlayout.widget.ConstraintLayout>