<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323131"
    tools:context=".Activity_Reproductor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frmdialogoperzonalizado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#323131"
        android:textAlignment="center"
        tools:context=".dialogopersonalizado">

        <TextView
            android:id="@+id/txttitulopeli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="264dp"
            android:fontFamily="@font/anton"
            android:text="@string/txttitulopeli"
            android:textAlignment="gravity"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblcategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/anton"
            android:text="@string/txtcategoria"
            android:textAlignment="center"
            android:textColor="#D50D18"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblgenero" />

        <TextView
            android:id="@+id/txtcategoriarepro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/anton"
            android:text="peli"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintStart_toEndOf="@+id/lblcategoria"
            app:layout_constraintTop_toBottomOf="@+id/lblgenero" />

        <TextView
            android:id="@+id/txtgenerorepro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="96dp"
            android:fontFamily="sans-serif-medium"
            android:text="hombre"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toEndOf="@+id/lblnom"
            app:layout_constraintTop_toBottomOf="@+id/txtedadrepro" />

        <TextView
            android:id="@+id/lblgenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="140dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txtgenero"
            android:textColor="#D50D18"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.254"
            app:layout_constraintStart_toEndOf="@+id/imavperfil"
            app:layout_constraintTop_toBottomOf="@+id/lbledad" />

        <TextView
            android:id="@+id/lblnom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="140dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txtnombre"
            android:textColor="#D50D18"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.173"
            app:layout_constraintStart_toEndOf="@+id/imavperfil"
            app:layout_constraintTop_toBottomOf="@+id/txtfoto" />

        <TextView
            android:id="@+id/lbledad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="140dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txtedad"
            android:textColor="#D50D18"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toEndOf="@+id/imavperfil"
            app:layout_constraintTop_toBottomOf="@+id/lblnom" />

        <TextView
            android:id="@+id/txtnombrerepro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="96dp"
            android:fontFamily="sans-serif-medium"
            android:text="fer"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lblnom"
            app:layout_constraintTop_toBottomOf="@+id/txtfoto" />

        <TextView
            android:id="@+id/txtedadrepro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="96dp"
            android:fontFamily="sans-serif-medium"
            android:text="18"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lblnom"
            app:layout_constraintTop_toBottomOf="@+id/txtnombrerepro" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="96dp"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icononetflix" />

        <TextView
            android:id="@+id/txtfoto"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/anton"
            android:text="@string/txtreproductor"
            android:textAlignment="center"
            android:textColor="#D50D18"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imavperfil"
            android:layout_width="99dp"
            android:layout_height="104dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bordes_rectangulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:srcCompat="@tools:sample/avatars" />

        <VideoView
            android:id="@+id/videoverpelicula"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txttitulopeli" />

        <ImageButton
            android:id="@+id/btnreturn"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoverpelicula"
            app:srcCompat="@drawable/returnico" />

        <ImageButton
            android:id="@+id/btnplay"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoverpelicula"
            app:srcCompat="@drawable/playico" />

        <ImageButton
            android:id="@+id/btnpause"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/circle"
            app:layout_constraintEnd_toStartOf="@+id/btnreturn"
            app:layout_constraintStart_toEndOf="@+id/btnplay"
            app:layout_constraintTop_toBottomOf="@+id/videoverpelicula"
            app:srcCompat="@drawable/pauseico" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="96dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icononetflix" />
</androidx.constraintlayout.widget.ConstraintLayout>